k8s-awesome-cat/backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gcp-team-backend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: back
  template:
    metadata:
      labels:
        component: back
    spec:
      volumes:
      - name: secret-volume
        secret:
          secretName: postgres-secret
      containers:
        - name: back
          image: gcr.io/gcp-team-project/backend:latest
          ports:
            - containerPort: 3000
          volumeMounts:
          - name: secret-volume
            readOnly: true
            mountPath: "/etc/secret-volume"
