k8s-awesome-cat/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: front
  template:
    metadata:
      labels:
        component: front
    spec:
      containers:
        - name: frontend
          image: gcr.io/gcp-team-project/frontend:latest
          ports:
            - containerPort: 80
