k8s-awesome-cat/service-for-backend.yml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: ClusterIP
  selector:
    component: back
  ports:
    - port: 3000
      targetPort: 3000
