k8s-awesome-cat/service-for-frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  type: ClusterIP
  selector:
    component: front
  ports:
    - port: 80
      targetPort: 80
